syntax = "proto3";

package auth;

option go_package = "/;auth";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc ConfirmSMSCode(ConfirmSMSCodeRequest) returns (ConfirmSMSCodeResponse) {}
}

message LoginRequest {
  string phone = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string error = 2;
}

message RegisterRequest {
  string phone = 1;
  string password = 2;
}

message RegisterResponse {
  string status = 1;
  string error = 2;
}

message ConfirmSMSCodeRequest {
  string phone = 1;
  string code = 2;
}

message ConfirmSMSCodeResponse {
  string message = 1;
  string error = 2;
}